Closed Bug 32977 Opened 26 years ago Closed 25 years ago

Aliases aren't updated accurately

Categories

(Core Graveyard :: Installer: XPInstall Engine, defect, P3)

PowerPC
Mac System 8.5
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: samir_bugzilla, Assigned: samir_bugzilla)

References

Details

(Whiteboard: [nsbeta3+])

We need to delete the alias file or at least whack 'alis' resources before updating the alias.
Status: NEW → ASSIGNED
Target Milestone: --- → M16
*** Bug 33056 has been marked as a duplicate of this bug. ***
Target Milestone: M16 → M17
samir, do we need this working for Mac Installer?
imho, this is not a blocker. Since the aliasing was the cause of the installer crash (one of them at least), we can leave without the alias for a while. Samir?
Eventually this will be required. I'd like to leave it in M17.
Build: 2000-08-14-04-M18(MAC) If second xpi installs new binary and uses the same alias from previous xpi install, then the alias still point to the old binary. It is understood that the desirable effect is for the alias to point to the new binary. If a user installs a new build to a new location, then launching the same alias will still launch the old build which is undesirable. The user would be required to either Select New Original with the old alias or remove the old alias and create a new one manually after finding the location of the new application. 1. From http://jimbob/trigger3.html, click Acceptance drop-down and choose a_filemacalias and install. 2. From http://jimbob/trigger3.html, enter a_filemacalias_app2.xpi in first field and install. RESULT: First xpi installs AppleCD Audio Player with the alias on the desktop. The second xpi installs SimpleText with "AppleCD Audio Player alias" (same as previous xpi) on the desktop. "AppleCD Audio Player alias" launches AppleCD Audio Player. EXPECTED RESULT: "AppleCD Audio Player alias" should launched newly installed SimpleText. Install script for a_filemacalias.xpi: //////////////////////////////////////////////////////////////////////////////// // a_filemacalias.js // // Acceptance test // • Creates a desktop shortcut to "AppleCD Audio Player" application // // ~ XPInstall QA // October 14, 1999 // // March 10, 2000 jimmylee Rewrite file operation macAlias to use new File // object // //////////////////////////////////////////////////////////////////////////////// jarSrc = "AppleCD Audio Player"; var vi = "1.1.1.1"; initInstall("Acceptance: a_filemacalias", "acceptance", vi, 0); f = getFolder("Program"); g = getFolder("Mac Desktop"); addFile("filemacalias", "2.2.2.2", jarSrc, f, jarSrc, true); err = File.macAlias(f, jarSrc, g, jarSrc + " alias"); logComment("File.macAlias returns: " + err); if (0 == getLastError()) performInstall(); else cancelInstall(); Install script for a_filemacalias_app2.xpi: //////////////////////////////////////////////////////////////////////////////// // a_filemacalias_app2 // // Acceptance test // • Creates a desktop shortcut "AppleCD Audio Player alias" to Simple Text / application // // ~ XPInstall QA // August 14, 2000 // //////////////////////////////////////////////////////////////////////////////// jarSrc = "SimpleText"; var vi = "1.1.3.3"; initInstall("Acceptance: a_filemacalias_app2", "acceptance", vi, 0); f = getFolder("Program"); g = getFolder("Mac Desktop"); addFile("filemacalias", "2.2.3.3", jarSrc, f, jarSrc, true); err = File.macAlias(f, jarSrc, g, "AppleCD Audio Player alias"); logComment("File.macAlias returns: " + err); if (0 == getLastError()) performInstall(); else cancelInstall();
Keywords: nsbeta3
Currently, after the second install, there are good chances that the Netscape alias on the Desktop is corrupted (by containing multiple 'alis' resources). Samir, in case there is already a Netscape Alias on the Desktop, we should do one of the following: - update the unique 'alis' resource in the existing alias file - replace the alias file with a brand new one - create a _new_ alias with a different name ("Netscape alias 1", "2", "3", depending on how many install already took place)
Target Milestone: M17 → M18
Ccing Dan.
Samir, [NEED INFO] on how hard/risky this would be to fix, whether we need it for our own installs, and how this fits in (or doesn't) given your current work load.
Whiteboard: [NEED INFO]
Hard: No. Just need to whack the alias file if it exists and recreate it every time. Risky: Not any more than now. Why? Because aliases get hosed on update. It's already really unpolished. Need: We use this in browser.xpi to create an alias to the 'Netscape 6' binary on the desktop. I think we should do this one.
Whiteboard: [NEED INFO]
Approved nsbeta3+, we need this for our install on Mac.
Whiteboard: [nsbeta3+]
Reviewed fix in hand. Waiting for tree to open.
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Build: 2000-08-24-08-M18(MAC) Looks good. Marking Verified!
Status: RESOLVED → VERIFIED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.