Update mac aliases correctly (File.macAlias() in the XPInstall context).[nsbeta3+ b=32977; r=ssu]